# vtkskeleton

./: .gitignore  CMakeLists.txt  MyImage3D.cpp  MyImage3D.h  README.md  functions.h  main.cpp
_report/: chapter-application.tex  main.tex  title.tex
